--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@ target/
 
 ### IntelliJ IDEA ###
 .idea/
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
+.idea/*
+**/.idea/
+**/.idea/*
 *.iml
+*.iws
 *.ipr
+out/
 
 ### Eclipse ###
 .apt_generated
